--- a/threex.spaceships/examples/basic.html
+++ b/threex.spaceships/examples/basic.html
@@ -7,6 +7,7 @@
 <body style='margin: 0px; background-color: #555555; overflow: hidden;'><script>
 	var renderer	= new THREE.WebGLRenderer();
 	renderer.setSize( window.innerWidth, window.innerHeight );
+
 	document.body.appendChild( renderer.domElement );
 	document.body.appendChild( WEBVR.createButton( renderer ) );
 
@@ -134,6 +135,11 @@
 		renderer.render( scene, camera );		
 	})
 	
+	renderer.setAnimationLoop( function () {
+
+		renderer.render( scene, camera );
+
+	} );
 	//////////////////////////////////////////////////////////////////////////////////
 	//		loop runner							//
 	//////////////////////////////////////////////////////////////////////////////////
@@ -141,6 +147,7 @@
 	requestAnimationFrame(function animate(nowMsec){
 		// keep looping
 		requestAnimationFrame( animate );
+		renderer.setAnimationLoop(scene,camera);
 		// measure time
 		lastTimeMsec	= lastTimeMsec || nowMsec-1000/60
 		var deltaMsec	= Math.min(200, nowMsec - lastTimeMsec)
