--- a/threex.spaceships/examples/basic.html
+++ b/threex.spaceships/examples/basic.html
@@ -4,19 +4,18 @@
 <script src='vendor/three.js/examples/js/loaders/MTLLoader.js'></script>
 <script src='../threex.spaceships.js'></script>
 <script src="../lib/WebVR.js"></script>
-<body style='margin: 0px; background-color: #555555; overflow: hidden;'><script>
+<body style='margin: 0px; background-color: #ec1010; overflow: hidden;'><script>
+
 	var renderer	= new THREE.WebGLRenderer();
 	renderer.setSize( window.innerWidth, window.innerHeight );
-
 	document.body.appendChild( renderer.domElement );
 	document.body.appendChild( WEBVR.createButton( renderer ) );
-
-	renderer.vr.enabled = true;
-
+	renderer.vr.enabled = true
+	//console.log(renderer.vr.enabled);
 	var onRenderFcts= [];
 	var scene	= new THREE.Scene();
 	var camera	= new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.01, 1000);
-	camera.position.z = 2;	
+	camera.position.z = -2;	
 
 	//////////////////////////////////////////////////////////////////////////////////
 	//		set 3 point lighting						//
@@ -112,7 +111,6 @@
 	})
 
 
-
 	//////////////////////////////////////////////////////////////////////////////////
 	//		Camera Controls							//
 	//////////////////////////////////////////////////////////////////////////////////
@@ -135,19 +133,15 @@
 		renderer.render( scene, camera );		
 	})
 	
-	renderer.setAnimationLoop( function () {
-
-		renderer.render( scene, camera );
-
-	} );
+	 
 	//////////////////////////////////////////////////////////////////////////////////
 	//		loop runner							//
 	//////////////////////////////////////////////////////////////////////////////////
 	var lastTimeMsec= null
+	//renderer.setAnimationLoop(scene,camera);
 	requestAnimationFrame(function animate(nowMsec){
 		// keep looping
 		requestAnimationFrame( animate );
-		renderer.setAnimationLoop(scene,camera);
 		// measure time
 		lastTimeMsec	= lastTimeMsec || nowMsec-1000/60
 		var deltaMsec	= Math.min(200, nowMsec - lastTimeMsec)
@@ -156,5 +150,8 @@
 		onRenderFcts.forEach(function(onRenderFct){
 			onRenderFct(deltaMsec/1000, nowMsec/1000)
 		})
+		renderer.render( scene, camera );	
 	})
-</script></body>
+	renderer.setAnimationLoop(requestanimationFrame.animate);
+</script>
+</body>
