--- a/anu.html
+++ b/anu.html
@@ -16,7 +16,6 @@
 	//console.log(renderer.vr.enabled);
 	var onRenderFcts= [];
 	var scene	= new THREE.Scene();
-  console.log(scene.position);
 	var camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
 	camera.position.z = -2;
   // camera.position.
@@ -103,6 +102,7 @@
 
 	player = new THREE.Group()
 	player.add(camera)
+  scene.add(player)
 	console.log(player)
 
 	/*THREEx.SpaceShips.loadShuttle01(function(object3d){
@@ -121,17 +121,18 @@
 	//////////////////////////////////////////////////////////////////////////////////
 	//		Camera Controls							//
 	//////////////////////////////////////////////////////////////////////////////////
-	var mouse	= {x : 0, y : 0}
-	document.addEventListener('mousemove', function(event){
-		mouse.x	= (event.clientX / window.innerWidth ) - 0.5
-		//mouse.y	= (event.clientY / window.innerHeight) - 0.5
-	}, false)
-	onRenderFcts.push(function(delta, now){
-		camera.position.x += (mouse.x*5 - camera.position.x) * (delta*3)
-		//camera.position.y += (mouse.y*5 - camera.position.y) * (delta*3)
-    player.position.x += (mouse.x*5 - camera.position.x) * (delta*3)
-		camera.lookAt( scene.position )
-	})
+	// var mouse	= {x : 0, y : 0}
+	// document.addEventListener('mousemove', function(event){
+	// 	mouse.x	= (event.clientX / window.innerWidth ) - 0.5
+	// 	mouse.y	= (event.clientY / window.innerHeight) - 0.5
+	// }, false)
+	// onRenderFcts.push(function(delta, now){
+	// 	camera.position.x += (mouse.x*5 - camera.position.x) * (delta*3)
+	// 	camera.position.y += (mouse.y*5 - camera.position.y) * (delta*3)
+	// 	camera.lookAt( scene.position )
+	// })
+  camera.lookAt( scene.position )
+
 	//////////////////////////////////////////////////////////////////////////////////
 	//		render the scene						//
 	//////////////////////////////////////////////////////////////////////////////////
