--- a/index.html
+++ b/index.html
@@ -10,15 +10,17 @@
     var renderer	= new THREE.WebGLRenderer();
     //renderer.setPixelRatio(window.devicePixelRatio);
     renderer.setSize( window.innerWidth, window.innerHeight );
-//    renderer.vr.enabled = true
+    renderer.vr.enabled = true
 	document.body.appendChild( renderer.domElement );
-//	document.body.appendChild( WEBVR.createButton( renderer ) );
+	document.body.appendChild( WEBVR.createButton( renderer ) );
 	//console.log(renderer.vr.enabled);
 	var onRenderFcts= [];
 	var scene	= new THREE.Scene();
   console.log(scene.position);
 	var camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
-	camera.position.z = -2;
+	camera.position.z = 10;
+  camera.position.x = 100;
+  camera.position.y = 3;
   // camera.position.
 	//////////////////////////////////////////////////////////////////////////////////
 	//		set 3 point lighting						//
@@ -103,7 +105,8 @@
 
 	player = new THREE.Group()
 	player.add(camera)
-	console.log(player)
+  scene.add(player)
+//	console.log(player)
 
 	/*THREEx.SpaceShips.loadShuttle01(function(object3d){
 		object3d.position.x	= -1
@@ -121,17 +124,18 @@
 	//////////////////////////////////////////////////////////////////////////////////
 	//		Camera Controls							//
 	//////////////////////////////////////////////////////////////////////////////////
-	var mouse	= {x : 0, y : 0}
-	document.addEventListener('mousemove', function(event){
-		mouse.x	= (event.clientX / window.innerWidth ) - 0.5
-		//mouse.y	= (event.clientY / window.innerHeight) - 0.5
-	}, false)
-	onRenderFcts.push(function(delta, now){
-		camera.position.x += (mouse.x*5 - camera.position.x) * (delta*3)
-		//camera.position.y += (mouse.y*5 - camera.position.y) * (delta*3)
-    player.position.x += (mouse.x*5 - camera.position.x) * (delta*3)
-		camera.lookAt( scene.position )
-	})
+	// var mouse	= {x : 0, y : 0}
+	// document.addEventListener('mousemove', function(event){
+	// 	mouse.x	= (event.clientX / window.innerWidth ) - 0.5
+	// 	//mouse.y	= (event.clientY / window.innerHeight) - 0.5
+	// }, false)
+	// onRenderFcts.push(function(delta, now){
+	// 	camera.position.x += (mouse.x*5 - camera.position.x) * (delta*3)
+	// 	//camera.position.y += (mouse.y*5 - camera.position.y) * (delta*3)
+  //   player.position.x += (mouse.x*5 - camera.position.x) * (delta*3)
+	// 	camera.lookAt( scene.position )
+	// })
+
 	//////////////////////////////////////////////////////////////////////////////////
 	//		render the scene						//
 	//////////////////////////////////////////////////////////////////////////////////
