--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
 	var scene	= new THREE.Scene();
   console.log(scene.position);
 	var camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
-	camera.position.z = 10;
-  camera.position.x = 100;
-  camera.position.y = 3;
+	camera.position.z = -2;
   // camera.position.
 	//////////////////////////////////////////////////////////////////////////////////
 	//		set 3 point lighting						//
@@ -65,48 +63,55 @@
 		object3d.position.y	=  0.5
 		scene.add(object3d)
 	})*/
-
-	/*THREEx.SpaceShips.loadSpaceFighter02(function(object3d){
-		object3d.position.x	= 1
-		object3d.position.y	= 0.5
+var apalah
+	var enemy = new THREEx.SpaceShips.loadSpaceFighter02(function(object3d){
+    object3d.name = 'enemyy'
+		object3d.position.x	= 0
+    object3d.position.z = 20
 		scene.add(object3d)
-	})*/
+    scene.getObjectByName('enemyy').position.z -= 0.1;
+    const enem = scene.getObjectByName('enemyy')
+    apalah = enem
+	})
+  console.log("asdsad")
+  console.log(apalah)
+  scene.add(enemy)
 
 	var player = new THREEx.SpaceShips.loadSpaceFighter03(function(object3d){
-        var spaceship	= object3d
-		scene.add(spaceship)
-
-		var shoot	= new THREEx.SpaceShips.Shoot() // Shoot Left
-		shoot.position.x= 0.5
-		shoot.position.z= 0.3
-		scene.add(shoot)
-
-		var shoot	= new THREEx.SpaceShips.Shoot() // Shoot Right
-		shoot.position.x=-0.5
-		shoot.position.z= 0.3
-		scene.add(shoot)
-
-		var detonation	= new THREEx.SpaceShips.Detonation() //Detonate Left
-		detonation.position.x= 0.5
-		detonation.position.z= 0.1
-		scene.add(detonation)
-
-		var detonation	= new THREEx.SpaceShips.Detonation() //Detonate Right
-		detonation.position.x=-0.5
-		detonation.position.z= 0.1
-		scene.add(detonation)
-
-		var light	= new THREE.PointLight()
-		detonation.position.x=-0.5
-		detonation.position.z= 0.1
-
-		scene.add(light)
+    object3d.name = 'anuku'
+    var spaceship	= object3d
+    scene.add(spaceship)
 	})
+
+	var shootleft	= new THREEx.SpaceShips.Shoot() // Shoot Left
+	shootleft.position.x= 0.5
+	shootleft.position.z= 0.3
+	scene.add(shootleft)
+
+	var shootright	= new THREEx.SpaceShips.Shoot() // Shoot Right
+	shootright.position.x=-0.5
+	shootright.position.z= 0.3
+	scene.add(shootright)
+
+	var detonation	= new THREEx.SpaceShips.Detonation() //Detonate Left
+	detonation.position.x= 0.5
+	detonation.position.z= 0.1
+	scene.add(detonation)
+
+	var detonation	= new THREEx.SpaceShips.Detonation() //Detonate Right
+	detonation.position.x=-0.5
+	detonation.position.z= 0.1
+	scene.add(detonation)
+
+	var light	= new THREE.PointLight()
+	detonation.position.x=-0.5
+	detonation.position.z= 0.1
+
+	scene.add(light)
 
 	player = new THREE.Group()
 	player.add(camera)
   scene.add(player)
-//	console.log(player)
 
 	/*THREEx.SpaceShips.loadShuttle01(function(object3d){
 		object3d.position.x	= -1
@@ -124,17 +129,17 @@
 	//////////////////////////////////////////////////////////////////////////////////
 	//		Camera Controls							//
 	//////////////////////////////////////////////////////////////////////////////////
-	// var mouse	= {x : 0, y : 0}
-	// document.addEventListener('mousemove', function(event){
-	// 	mouse.x	= (event.clientX / window.innerWidth ) - 0.5
-	// 	//mouse.y	= (event.clientY / window.innerHeight) - 0.5
-	// }, false)
-	// onRenderFcts.push(function(delta, now){
-	// 	camera.position.x += (mouse.x*5 - camera.position.x) * (delta*3)
-	// 	//camera.position.y += (mouse.y*5 - camera.position.y) * (delta*3)
-  //   player.position.x += (mouse.x*5 - camera.position.x) * (delta*3)
-	// 	camera.lookAt( scene.position )
-	// })
+	var mouse	= {x : 0, y : 0}
+	document.addEventListener('mousemove', function(event){
+		mouse.x	= (event.clientX / window.innerWidth ) - 0.5
+		mouse.y	= (event.clientY / window.innerHeight) - 0.5
+	}, false)
+	onRenderFcts.push(function(delta, now){
+		camera.position.x += (mouse.x*5 - camera.position.x) * (delta*3)
+		camera.position.y += (mouse.y*5 - camera.position.y) * (delta*3)
+    player.position.x += (mouse.x*5 - camera.position.x) * (delta*3)
+		camera.lookAt( scene.position )
+	})
 
 	//////////////////////////////////////////////////////////////////////////////////
 	//		render the scene						//
@@ -143,10 +148,19 @@
 		renderer.render( scene, camera );
 	})
 
+  var time = 0;
 	renderer.setAnimationLoop( function () {
-
-	renderer.render( scene, camera );
-
+    shootleft.position.z += 0.2;
+    shootright.position.z += 0.2;
+    // enemy.object3d.position.z -= 0.2;
+    time += 1;
+    console.log("anu"+ time + " " +shootright.position.z);
+    if(time == 100){
+      time = 0;
+      shootleft.position.z = 0;
+      shootright.position.z = 0;
+    }
+	  renderer.render( scene, camera );
 	} );
 
 
