--- a/index.html
+++ b/index.html
@@ -5,19 +5,24 @@
 <script src='lib/MTLLoader.js'></script>
 <script src='threex.spaceships.js'></script>
 <script src="lib/WebVR.js"></script>
+<script src="lib/firstperson.js"></script>
 <body style='margin: 0px; background-color: rgb(139, 138, 138); overflow: hidden;'><script>
 
     var renderer	= new THREE.WebGLRenderer();
     //renderer.setPixelRatio(window.devicePixelRatio);
     renderer.setSize( window.innerWidth, window.innerHeight );
-    renderer.vr.enabled = true
+    //renderer.vr.enabled = true
 	document.body.appendChild( renderer.domElement );
-	document.body.appendChild( WEBVR.createButton( renderer ) );
+	//document.body.appendChild( WEBVR.createButton( renderer ) );
 	//console.log(renderer.vr.enabled);
 	var onRenderFcts= [];
 	var scene	= new THREE.Scene();
-	var camera	= new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.01, 1000);
-	camera.position.z = 2;	
+	var camera	= new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 1, 10000);
+	camera.position.z = 2;
+
+	control = new THREE.FirstPersonControls(camera)
+
+
 
 	//////////////////////////////////////////////////////////////////////////////////
 	//		set 3 point lighting						//
@@ -73,7 +78,7 @@
         var spaceship	= object3d
 		scene.add(spaceship)
 	
-		var shoot	= new THREEx.SpaceShips.Shoot() // Shoot Left
+		/*var shoot	= new THREEx.SpaceShips.Shoot() // Shoot Left
 		shoot.position.x= 0.5
 		shoot.position.z= 0.3
 		scene.add(shoot)
@@ -81,7 +86,7 @@
 		var shoot	= new THREEx.SpaceShips.Shoot() // Shoot Right
 		shoot.position.x=-0.5
 		shoot.position.z= 0.3
-		scene.add(shoot)
+		scene.add(shoot)*/
 		
 		var detonation	= new THREEx.SpaceShips.Detonation() //Detonate Left
 		detonation.position.x= 0.5
@@ -102,8 +107,10 @@
 
 	player = new THREE.Group()
 	player.add(camera)
-
-	console.log(player)
+	//player.position.y = 0.3
+	console.log(player.position.y)
+	scene.add(player)
+	//console.log(player)
 	
 	/*THREEx.SpaceShips.loadShuttle01(function(object3d){
 		object3d.position.x	= -1
@@ -154,6 +161,7 @@
 	//renderer.setAnimationLoop(scene,camera);
 	requestAnimationFrame(function animate(nowMsec){
 		// keep looping
+		player.position.y -= 0.001
 		requestAnimationFrame( animate );
 		// measure time
 		lastTimeMsec	= lastTimeMsec || nowMsec-1000/60
