--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <script src='lib/MTLLoader.js'></script>
 <script src='threex.spaceships.js'></script>
 <script src="lib/WebVR.js"></script>
+<script src="bower_components/threex.planets/threex.planets.js"></script>
 <script src="lib/firstperson.js"></script>
 <body style='margin: 0px; background-color: rgb(139, 138, 138); overflow: hidden;'><script>
 
@@ -17,20 +18,16 @@
 	//console.log(renderer.vr.enabled);
 	var onRenderFcts= [];
 	var scene	= new THREE.Scene();
-<<<<<<< HEAD
 	var camera	= new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 1, 10000);
 	camera.position.z = 2;
 
 	control = new THREE.FirstPersonControls(camera)
 
 
-
-=======
   console.log(scene.position);
 	var camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
 	camera.position.z = -2;
   // camera.position.
->>>>>>> e8ad1500715394a2331a396235a7f057b773f16b
 	//////////////////////////////////////////////////////////////////////////////////
 	//		set 3 point lighting						//
 	//////////////////////////////////////////////////////////////////////////////////
@@ -74,55 +71,47 @@
 		object3d.position.y	=  0.5
 		scene.add(object3d)
 	})*/
-var apalah
-	var enemy = new THREEx.SpaceShips.loadSpaceFighter02(function(object3d){
-    object3d.name = 'enemyy'
-		object3d.position.x	= 0
-    object3d.position.z = 20
-		scene.add(object3d)
-    scene.getObjectByName('enemyy').position.z -= 0.1;
-    const enem = scene.getObjectByName('enemyy')
-    apalah = enem
-	})
-  console.log("asdsad")
-  console.log(apalah)
-  scene.add(enemy)
+
+  var moonMesh  = THREEx.Planets.createMoon()
+  moonMesh.position.x = 0
+  moonMesh.position.y = 0
+  moonMesh.position.z = 20
+	scene.add(moonMesh)
+  // console.log("asdsad")
+  // console.log(apalah)
 
 	var player = new THREEx.SpaceShips.loadSpaceFighter03(function(object3d){
-<<<<<<< HEAD
         var spaceship	= object3d
-		scene.add(spaceship)
-	
+		    scene.add(spaceship)
 		/*var shoot	= new THREEx.SpaceShips.Shoot() // Shoot Left
 		shoot.position.x= 0.5
 		shoot.position.z= 0.3
 		scene.add(shoot)
-		
+
 		var shoot	= new THREEx.SpaceShips.Shoot() // Shoot Right
 		shoot.position.x=-0.5
 		shoot.position.z= 0.3
 		scene.add(shoot)*/
-		
+
 		var detonation	= new THREEx.SpaceShips.Detonation() //Detonate Left
 		detonation.position.x= 0.5
 		detonation.position.z= 0.1
 		scene.add(detonation)
-		
+
 		var detonation	= new THREEx.SpaceShips.Detonation() //Detonate Right
 		detonation.position.x=-0.5
 		detonation.position.z= 0.1
 		scene.add(detonation)
-		
+
 		var light	= new THREE.PointLight()
 		detonation.position.x=-0.5
 		detonation.position.z= 0.1
-			
+
 		scene.add(light)
-=======
+
     object3d.name = 'anuku'
     var spaceship	= object3d
     scene.add(spaceship)
->>>>>>> e8ad1500715394a2331a396235a7f057b773f16b
 	})
 
 	var shootleft	= new THREEx.SpaceShips.Shoot() // Shoot Left
@@ -153,16 +142,13 @@ var apalah
 
 	player = new THREE.Group()
 	player.add(camera)
-<<<<<<< HEAD
 	//player.position.y = 0.3
-	console.log(player.position.y)
+	// console.log(player.position.y)
 	scene.add(player)
 	//console.log(player)
-	
-=======
+
   scene.add(player)
 
->>>>>>> e8ad1500715394a2331a396235a7f057b773f16b
 	/*THREEx.SpaceShips.loadShuttle01(function(object3d){
 		object3d.position.x	= -1
 		object3d.position.y	= -0.5
@@ -199,12 +185,36 @@ var apalah
 	})
 
   var time = 0;
+  var timeMoon = 0;
+  var shot = 0;
 	renderer.setAnimationLoop( function () {
     shootleft.position.z += 0.2;
     shootright.position.z += 0.2;
-    // enemy.object3d.position.z -= 0.2;
+    moonMesh.position.z -= 0.025;
     time += 1;
-    console.log("anu"+ time + " " +shootright.position.z);
+    timeMoon += 1;
+    // console.log("anu"+ time + " " +shootright.position.z);
+    if(timeMoon == 800){
+      moonMesh.position.z = 20;
+      timeMoon = 0;
+    }
+
+    if(moonMesh.position.z < shootleft.position.z){
+      shootleft.position.z = 0;
+      shootright.position.z = 0;
+      shot+=1
+      time = 0;
+    }
+
+    if(shot == 3){
+      time = 0;
+      timeMoon = 0;
+      shot = 0;
+      shootleft.position.z = 0;
+      shootright.position.z = 0;
+      moonMesh.position.z = 20;
+    }
+
     if(time == 100){
       time = 0;
       shootleft.position.z = 0;
@@ -221,7 +231,7 @@ var apalah
 	//renderer.setAnimationLoop(scene,camera);
 	requestAnimationFrame(function animate(nowMsec){
 		// keep looping
-		player.position.y -= 0.001
+		// player.position.y -= 0.001
 		requestAnimationFrame( animate );
 		// measure time
 		lastTimeMsec	= lastTimeMsec || nowMsec-1000/60
