--- a/anu.html
+++ b/anu.html
@@ -4,18 +4,28 @@
 <script src='lib/OBJLoader.js'></script>
 <script src='lib/MTLLoader.js'></script>
 <script src='threex.spaceships.js'></script>
+<script src='threex.KeyboardState.js'></script>
 <script src="lib/WebVR.js"></script>
+<script src="bower_components/threex.planets/threex.planets.js"></script>
+<script src="lib/firstperson.js"></script>
 <body style='margin: 0px; background-color: rgb(139, 138, 138); overflow: hidden;'><script>
 
     var renderer	= new THREE.WebGLRenderer();
     //renderer.setPixelRatio(window.devicePixelRatio);
     renderer.setSize( window.innerWidth, window.innerHeight );
-//    renderer.vr.enabled = true
+    //renderer.vr.enabled = true
 	document.body.appendChild( renderer.domElement );
-//	document.body.appendChild( WEBVR.createButton( renderer ) );
+	//document.body.appendChild( WEBVR.createButton( renderer ) );
 	//console.log(renderer.vr.enabled);
 	var onRenderFcts= [];
 	var scene	= new THREE.Scene();
+	var camera	= new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 1, 10000);
+	camera.position.z = 2;
+
+	control = new THREE.FirstPersonControls(camera)
+
+
+  console.log(scene.position);
 	var camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
 	camera.position.z = -2;
   // camera.position.
@@ -63,17 +73,18 @@
 		scene.add(object3d)
 	})*/
 
-	/*THREEx.SpaceShips.loadSpaceFighter02(function(object3d){
-		object3d.position.x	= 1
-		object3d.position.y	= 0.5
-		scene.add(object3d)
-	})*/
+  var moonMesh  = THREEx.Planets.createMoon()
+  moonMesh.position.x = Math.floor((Math.random() * 10) - 5);
+  moonMesh.position.y = 0
+  moonMesh.position.z = 20
+	scene.add(moonMesh)
+  // console.log("asdsad")
+  // console.log(apalah)
 
 	var player = new THREEx.SpaceShips.loadSpaceFighter03(function(object3d){
         var spaceship	= object3d
-		scene.add(spaceship)
-
-		var shoot	= new THREEx.SpaceShips.Shoot() // Shoot Left
+		    scene.add(spaceship)
+		/*var shoot	= new THREEx.SpaceShips.Shoot() // Shoot Left
 		shoot.position.x= 0.5
 		shoot.position.z= 0.3
 		scene.add(shoot)
@@ -81,7 +92,7 @@
 		var shoot	= new THREEx.SpaceShips.Shoot() // Shoot Right
 		shoot.position.x=-0.5
 		shoot.position.z= 0.3
-		scene.add(shoot)
+		scene.add(shoot)*/
 
 		var detonation	= new THREEx.SpaceShips.Detonation() //Detonate Left
 		detonation.position.x= 0.5
@@ -98,12 +109,64 @@
 		detonation.position.z= 0.1
 
 		scene.add(light)
+
+    object3d.name = 'anuku'
+    var spaceship	= object3d
+    scene.add(spaceship)
 	})
+
+	var shootleft	= new THREEx.SpaceShips.Shoot() // Shoot Left
+	shootleft.position.x= 0.5
+	shootleft.position.z= 0.3
+	scene.add(shootleft)
+
+	var shootright	= new THREEx.SpaceShips.Shoot() // Shoot Right
+	shootright.position.x=-0.5
+	shootright.position.z= 0.3
+	scene.add(shootright)
+
+	var detonation	= new THREEx.SpaceShips.Detonation() //Detonate Left
+	detonation.position.x= 0.5
+	detonation.position.z= 0.1
+	scene.add(detonation)
+
+	var detonation	= new THREEx.SpaceShips.Detonation() //Detonate Right
+	detonation.position.x=-0.5
+	detonation.position.z= 0.1
+	scene.add(detonation)
+
+	var light	= new THREE.PointLight()
+	detonation.position.x=-0.5
+	detonation.position.z= 0.1
+
+	scene.add(light)
 
 	player = new THREE.Group()
 	player.add(camera)
-  scene.add(player)
-	console.log(player)
+	scene.add(player)
+	//console.log(player)
+
+  //////////////////////////////////////////////////////////////////////////////////
+  //		controls by keyboard						//
+  //////////////////////////////////////////////////////////////////////////////////
+
+  // create keyboard instance
+  var leftmoon = moonMesh.position.x+0.5
+  var rightmoon = moonMesh.position.x-0.5
+  var keyboard  = new THREEx.KeyboardState();
+  // add function in rendering loop
+  onRenderFcts.push(function(delta, now){
+    // only if the spaceship is loaded
+    if( moonMesh === null )  return;
+    // set the speed
+    var speed = 1;
+    // only if moonMesh is loaded
+    if( keyboard.pressed('left') ){
+        moonMesh.position.x  -= speed * delta;
+    }else if( keyboard.pressed('right') ){
+        moonMesh.position.x  += speed * delta;
+    }
+  })
 
 	/*THREEx.SpaceShips.loadShuttle01(function(object3d){
 		object3d.position.x	= -1
@@ -121,17 +184,17 @@
 	//////////////////////////////////////////////////////////////////////////////////
 	//		Camera Controls							//
 	//////////////////////////////////////////////////////////////////////////////////
-	// var mouse	= {x : 0, y : 0}
-	// document.addEventListener('mousemove', function(event){
-	// 	mouse.x	= (event.clientX / window.innerWidth ) - 0.5
-	// 	mouse.y	= (event.clientY / window.innerHeight) - 0.5
-	// }, false)
-	// onRenderFcts.push(function(delta, now){
-	// 	camera.position.x += (mouse.x*5 - camera.position.x) * (delta*3)
-	// 	camera.position.y += (mouse.y*5 - camera.position.y) * (delta*3)
-	// 	camera.lookAt( scene.position )
-	// })
-  camera.lookAt( scene.position )
+	var mouse	= {x : 0, y : 0}
+	document.addEventListener('mousemove', function(event){
+		mouse.x	= (event.clientX / window.innerWidth ) - 0.5
+		mouse.y	= (event.clientY / window.innerHeight) - 0.5
+	}, false)
+	onRenderFcts.push(function(delta, now){
+		camera.position.x += (mouse.x*5 - camera.position.x) * (delta*3)
+		camera.position.y += (mouse.y*5 - camera.position.y) * (delta*3)
+    player.position.x += (mouse.x*5 - camera.position.x) * (delta*3)
+		camera.lookAt( scene.position )
+	})
 
 	//////////////////////////////////////////////////////////////////////////////////
 	//		render the scene						//
@@ -140,10 +203,47 @@
 		renderer.render( scene, camera );
 	})
 
+  var time = 0;
+  var timeMoon = 0;
+  var shot = 0;
 	renderer.setAnimationLoop( function () {
+    shootleft.position.z += 0.2;
+    shootright.position.z += 0.2;
+    moonMesh.position.z -= 0.025;
+    time += 1;
+    timeMoon += 1;
+    // console.log("anu"+ time + " " +shootright.position.z);
+    if(timeMoon == 800){
+      moonMesh.position.z = 20;
+      timeMoon = 0;
+    }
 
-	renderer.render( scene, camera );
+    if(moonMesh.position.z < shootleft.position.z){
+      console.log("anu: " + shootleft.position.x + " " + moonMesh.position.x + " " + shootright.position.x)
+      if(shootleft.position.x >= moonMesh.position.x-0.5 && shootright.position.x <= moonMesh.position.x+0.5){
+        console.log("asdasd")
+        shootleft.position.z = 0;
+        shootright.position.z = 0;
+        shot+=1
+        time = 0;
+      }
+    }
 
+    if(shot == 3){
+      time = 0;
+      timeMoon = 0;
+      shot = 0;
+      shootleft.position.z = 0;
+      shootright.position.z = 0;
+      moonMesh.position.z = 20;
+    }
+
+    if(time == 100){
+      time = 0;
+      shootleft.position.z = 0;
+      shootright.position.z = 0;
+    }
+	  renderer.render( scene, camera );
 	} );
 
 
@@ -154,6 +254,7 @@
 	//renderer.setAnimationLoop(scene,camera);
 	requestAnimationFrame(function animate(nowMsec){
 		// keep looping
+		// player.position.y -= 0.001
 		requestAnimationFrame( animate );
 		// measure time
 		lastTimeMsec	= lastTimeMsec || nowMsec-1000/60
