dari atas-bawah jadi kiri-kanan

--- a/index.html
+++ b/index.html
@@ -143,13 +143,18 @@
 		}else if( keyboard.pressed('up') ){
 		    player.position.y  += speed * delta;
 		}
+    if( keyboard.pressed('left') ){
+        moonMesh.position.x  -= speed * delta;
+    }else if( keyboard.pressed('right') ){
+        moonMesh.position.x  += speed * delta;
+    }
 
-		moonMesh.position.z += -2 * delta;
-		if( moonMesh.position.z < -3 )  resetMoon()
+		// moonMesh.position.z += -2 * delta;
+		if( moonMesh.position.z <= 0 )  resetMoon()
 
 		shootleft.position.z += shootSpeed * delta;
 		shootright.position.z += shootSpeed * delta;
-		if( shootleft.position.z > 10) resetshoot()
+		if( shootleft.position.z > 20) resetshoot()
 
 		camera.position.x += (mouse.x*5 - camera.position.x) * (delta*3)
 		camera.position.y += (mouse.y*5 - camera.position.y) * (delta*3)
@@ -161,9 +166,9 @@
 	//				function 						//
 	//////////////////////////////////////////////////////////////////////////////////
 	function resetMoon(){
-	    moonMesh.position.x = 0
-	    moonMesh.position.y = 5 * (Math.random()-0.5)
-	    moonMesh.position.z = 10
+	    moonMesh.position.y = 0
+	    moonMesh.position.x = 5 * (Math.random()-0.5)
+	    moonMesh.position.z = 20
 	}
 
 	function resetshoot(){
@@ -196,7 +201,7 @@
 	renderer.setAnimationLoop( function () {
     // shootleft.position.z += 0.2;
     // shootright.position.z += 0.2;
-    // moonMesh.position.z -= 0.025;
+    moonMesh.position.z -= 0.025;
     // time += 1;
     // timeMoon += 1;
     // // console.log("anu"+ time + " " +shootright.position.z);
@@ -205,21 +210,19 @@
     //   timeMoon = 0;
     // }
 
-    // if(moonMesh.position.z < shootleft.position.z){
-    //   shootleft.position.z = 0;
-    //   shootright.position.z = 0;
-    //   shot+=1
-    //   time = 0;
-    // }
+    if(moonMesh.position.z < shootleft.position.z){
+      console.log("asdasds: " +  moonMesh.position.z + " " + shootleft.position.z)
+      if(shootleft.position.x >= moonMesh.position.x-0.5 && shootright.position.x <= moonMesh.position.x+0.5){
+        resetshoot()
+        shot+=1
+      }
+    }
 
-    // if(shot == 3){
-    //   time = 0;
-    //   timeMoon = 0;
-    //   shot = 0;
-    //   shootleft.position.z = 0;
-    //   shootright.position.z = 0;
-    //   moonMesh.position.z = 20;
-    // }
+    if(shot == 3){
+      shot = 0
+      resetshoot()
+      resetMoon()
+    }
 
     // if(time == 100){
     //   time = 0;
