--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 <script src="lib/WebVR.js"></script>
 <script src="bower_components/threex.planets/threex.planets.js"></script>
 <script src="lib/firstperson.js"></script>
-<body style='margin: 0px; background-color: rgb(139, 138, 138); overflow: hidden;'><script>
+<link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
+<body style='margin: 0px; background-color: rgb(139, 138, 138); overflow: hidden;'>
+  <div style="float:right;font-family:'Orbitron',sans-serif;" id="score">
+  </div>
+<script>
+
     var renderer	= new THREE.WebGLRenderer();
     //renderer.setPixelRatio(window.devicePixelRatio);
     renderer.setSize( window.innerWidth, window.innerHeight );
@@ -20,7 +25,10 @@
 	var scene	= new THREE.Scene();
 	var camera	= new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 1, 10000);
 	camera.position.z = 2;
+
 	control = new THREE.FirstPersonControls(camera)
+
+
   console.log(scene.position);
 	var camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
 	camera.position.z = -2;
@@ -28,26 +36,32 @@
 	//////////////////////////////////////////////////////////////////////////////////
 	//		set 3 point lighting						//
 	//////////////////////////////////////////////////////////////////////////////////
+
 	;(function(){
 		var object3d	= new THREE.AmbientLight(0x101010*8)
 		object3d.name	= 'Ambient light'
 		scene.add(object3d)
+
 		var object3d	= new THREE.DirectionalLight('white', 0.225)
 		object3d.position.set(2.6,1,3)
 		object3d.name	= 'Back light'
 		scene.add(object3d)
+
 		var object3d	= new THREE.DirectionalLight('white', 0.375)
 		object3d.position.set(-2, -1, 0)
 		object3d.name 	= 'Key light'
 		scene.add(object3d)
+
 		var object3d	= new THREE.DirectionalLight('white', 0.5*1)
 		object3d.position.set(3, 3, 2)
 		object3d.name	= 'Fill light'
 		scene.add(object3d)
 	})()
+
 	//////////////////////////////////////////////////////////////////////////////////
 	//		comment								//
 	//////////////////////////////////////////////////////////////////////////////////
+
 	var texture	= THREE.ImageUtils.loadTexture('assets/galaxy_starfield.png')
 	var material	= new THREE.MeshBasicMaterial({
 		map	: texture,
@@ -56,14 +70,18 @@
 	var geometry	= new THREE.SphereGeometry(100, 32, 32)
 	var mesh	= new THREE.Mesh(geometry, material)
 	scene.add(mesh)
+
 	/*THREEx.SpaceShips.loadSpaceFighter01(function(object3d){
 		object3d.position.x	= -1
 		object3d.position.y	=  0.5
 		scene.add(object3d)
 	})*/
+
 	var moonMesh  = THREEx.Planets.createMoon()
 	scene.add(moonMesh)
 	resetMoon()
+
+
 	//////////////////////////////////////
 	//		player 			//
 	////////////////////////////////////
@@ -73,59 +91,72 @@
 		//position.z = -5
 		player = object3d
 	})
+
 	var shootleft	= new THREEx.SpaceShips.Shoot() // Shoot Left
 	shootleft.position.x= 0.5
 	shootleft.position.z= 0.3
 	scene.add(shootleft)
+
 	var shootright	= new THREEx.SpaceShips.Shoot() // Shoot Right
 	shootright.position.x=-0.5
 	shootright.position.z= 0.3
 	scene.add(shootright)
+
 	// var detonation	= new THREEx.SpaceShips.Detonation() //Detonate Left
 	// detonation.position.x= 0.5
 	// detonation.position.z= 0.1
 	// scene.add(detonation)
+
 	// var detonation	= new THREEx.SpaceShips.Detonation() //Detonate Right
 	// detonation.position.x=-0.5
 	// detonation.position.z= 0.1
 	// scene.add(detonation)
+
 	// var light	= new THREE.PointLight()
 	// detonation.position.x=-0.5
 	// detonation.position.z= 0.1
 	// scene.add(light)
+
 	/*THREEx.SpaceShips.loadShuttle01(function(object3d){
 		object3d.position.x	= -1
 		object3d.position.y	= -0.5
 		scene.add(object3d)
 	})*/
+
 	/*THREEx.SpaceShips.loadShuttle02(function(object3d){
 		object3d.position.x	=  1
 		object3d.position.y	= -0.5
 		scene.add(object3d)
 	})*/
+
+
+
 	////////////////////////////////////////////////////////////////////
 	//			Kontrol					//
 	///////////////////////////////////////////////////////////////////
 	var keyboard  = new THREEx.KeyboardState();
-	var shootSpeed = 5
+	var shootSpeed = 5;
+  var score = 0;
 	onRenderFcts.push(function(delta, now){
+
 		if( player === null )  return;
+
 		var speed = 1;
-		if( keyboard.pressed('S') ){
+		if( keyboard.pressed('down') ){
 		    player.position.y  -= speed * delta;
-		}else if( keyboard.pressed('W') ){
+		}else if( keyboard.pressed('up') ){
 		    player.position.y  += speed * delta;
 		}
-		//console.log(player.position.y)
-    if( keyboard.pressed('A') ){
-        moonMesh.position.x  += speed * delta;
-    }else if( keyboard.pressed('D') ){
+    if( keyboard.pressed('left') ){
         moonMesh.position.x  -= speed * delta;
-	}
-	console.log(player.position.x)
+    }else if( keyboard.pressed('right') ){
+        moonMesh.position.x  += speed * delta;
+    }
 
 		// moonMesh.position.z += -2 * delta;
-		if( moonMesh.position.z <= 0 )  resetMoon()
+		if( moonMesh.position.z <= 0 ) {
+      resetMoon();
+    }
 
 		shootleft.position.z += shootSpeed * delta;
 		shootright.position.z += shootSpeed * delta;
@@ -136,14 +167,16 @@
     //	player.position.x += (mouse.x*5 - camera.position.x) * (delta*3)
 		camera.lookAt( scene.position )
 	})
+
 	///////////////////////////////////////////////////////////////////////////////////
 	//				function 						//
 	//////////////////////////////////////////////////////////////////////////////////
 	function resetMoon(){
-	    moonMesh.position.y = 5 * (Math.random()-0.5)
-	    moonMesh.position.x = 0
+	    moonMesh.position.y = 0
+	    moonMesh.position.x = 5 * (Math.random()-0.5)
 	    moonMesh.position.z = 20
 	}
+
 	function resetshoot(){
 		var y = player.position.y
 	    shootleft.position.y = y
@@ -151,6 +184,7 @@
 	    shootright.position.y = y
 	    shootright.position.z = 0
 	}
+
 	//////////////////////////////////////////////////////////////////////////////////
 	//		Camera Controls							//
 	//////////////////////////////////////////////////////////////////////////////////
@@ -159,12 +193,14 @@
 		mouse.x	= (event.clientX / window.innerWidth ) - 0.5
 		mouse.y	= (event.clientY / window.innerHeight) - 0.5
 	}, false)
+
 	//////////////////////////////////////////////////////////////////////////////////
 	//		render the scene						//
 	//////////////////////////////////////////////////////////////////////////////////
 	onRenderFcts.push(function(){
 		renderer.render( scene, camera );
 	})
+
   var time = 0;
   var timeMoon = 0;
   var shot = 0;
@@ -173,23 +209,31 @@
     // shootright.position.z += 0.2;
     moonMesh.position.z -= 0.025;
     // time += 1;
-    // timeMoon += 1;
+    timeMoon += 1;
+    console.log(timeMoon)
     // // console.log("anu"+ time + " " +shootright.position.z);
-    // if(timeMoon == 800){
-    //   moonMesh.position.z = 20;
-    //   timeMoon = 0;
-    // }
+    if(timeMoon == 800){
+      score = 0;
+      document.getElementById("score").innerHTML = score
+      moonMesh.position.z = 20;
+      timeMoon = 0;
+    }
 
     if(moonMesh.position.z < shootleft.position.z){
-      console.log("asdasds: " +  moonMesh.position.z + " " + shootleft.position.z)
+      // console.log("asdasds: " +  moonMesh.position.z + " " + shootleft.position.z)
       if(shootleft.position.x >= moonMesh.position.x-0.5 && shootright.position.x <= moonMesh.position.x+0.5){
         resetshoot()
+        score += 10
         shot+=1
+        document.getElementById("score").innerHTML = score
       }
     }
 
     if(shot == 3){
+      score += 20
+      document.getElementById("score").innerHTML = score
       shot = 0
+      timeMoon = 0;
       resetshoot()
       resetMoon()
     }
@@ -201,6 +245,8 @@
     // }
 	  renderer.render( scene, camera );
 	} );
+
+
 	//////////////////////////////////////////////////////////////////////////////////
 	//		loop runner							//
 	//////////////////////////////////////////////////////////////////////////////////
